# fd-agents

./: BACKEND_COMPLETE.md  CHART_FIX_SUMMARY.md  CHART_TYPE_PRIORITY_FIX.md  DOCKER_GUIDE.md  PRE_RELEASE_REVIEW.md  README.md  bouman_olivier_promptlog.docx  demo_session_management.py  docker-compose.dev.yml  test_agent_modes.py  test_both_modes.py  test_chart_fix.py  test_comprehensive.py  test_excel_tracking.py  test_explicit_chart_types.py  test_fallback.sh  test_fallback_mode.py  test_final_verification.py  test_refusals.py  test_session_management.py
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  hmr_test.py  main.py
backend/app/agents/: __init__.py  chart_agent.py  fallback_agent.py
backend/app/api/: routes.py
backend/app/api/routes/: __init__.py  charts.py  chat.py  preferences.py  upload.py
backend/app/config/: logging.py  settings.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  chart_generator.py  excel_parser.py  persistence.py
backend/data/: sessions.json  test_sales.xlsx
backend/tests/: README.md  eval_chart_data.py  eval_color_scheme.py  eval_refusal.py  run_evals.py  test_color_change.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
guides/: BACKEND_TESTED.md  CODE_REVIEW.md  COLOR_SCHEME_PERSISTENCE_COMPLETE.md  FALLBACK_AGENT_COMPLETE.md  FALLBACK_AGENT_QUICK_REFERENCE.md  FRONTEND_COMPLETE.md  FRONTEND_REDESIGN.md  (+7 more)
(+21 files in other folders)
