[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/__pycache__/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "eval_*.py"]
python_functions = ["test_*", "run_eval"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chart-generator"
version = "1.0.0"
description = "AI-powered chart generation from text or Excel using OpenAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.0.0",
    "openai>=1.54.3",
    "python-multipart>=0.0.12",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]
